# watchmen-test-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  pyproject.toml
.github/workflows/: auto_test.yml  main.yml
docker/: docker-compose.yml
docker/mongo/: init-mongo.js  seed.js
site/: site.json
src/: demo_user.json  index.py  report-template.html  style.css  watchmen_test.py
src/model/: case.py  test_result.py
src/scenario/admin/: simple_core_path.py
src/scenario/admin/instance_data/: instances.json
src/scenario/admin/meta_data/: pipelines.json  spaces.json  topics.json  user_groups.json  users.json
src/sdk/admin/: admin_sdk.py
src/sdk/auth/: auth_sdk.py
src/sdk/common/: common_sdk.py
src/service/: import_init_data.py  load_case.py  report.py  site_service.py  test_case_execute.py
src/utils/: date_utils.py  file_utils 2.py  file_utils.py  header_utils.py
test_folder/: basic_case.json  data-of-pipeline -20210624104939.json  pipeline.json  topic.json
